fixed cutoff top

--- a/style.css
+++ b/style.css
@@ -18,14 +18,11 @@ body{
   color: var(--light-gray);
   font-size: 16px;
   font-family: 'Karla', sans-serif;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   min-height: 100vh;
   line-height: 1.5;
 }
 .container{
+  margin: 0 auto;
   width: 90vw;
   max-width: 680px;
   border-radius: 10px;
@@ -36,6 +33,7 @@ section{
 }
 footer{
   color: var(--grayish-blue);
+  margin-top: 40px;
 }
 
 .cta h1{
